src/test/deca/codegen/valid/UnFDivUn.deca
// Description:
//    tests simple division
//
// Resultats:
//
//
// Historique:
//    cree le 21/01/2017
{
print(1.0/1);
}
