src/test/deca/codegen/invalid/NoInitDivUn_f.deca
// Description:
//    division sans initialisation
//
// Resultats:
//  Erreur
//
// Historique:
//    cree le 22/01/2017
{
float x;
print(x / 1.0);
}
